# parallax-kernel

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  bootstrap.py  conftest.py  mkdocs.yml  pyproject.toml  schema.sql
.github/workflows/: prometheus-rules-check.yml  tests.yml
demo/: README.md  hackathon_walkthrough.sh
deploy/: Caddyfile  cloudflared.yml  fly.toml  railway.json
docs/: architecture.md  contract.md  deploy.md  index.md  install.md  lane-c-phase1.md  phase4-dual-memory-prd.md  shadow-write.md  state-transitions.md  tls.md
docs/adr/: ADR-001-content-hash-ssot.md  ADR-002-wal-page1-corruption-policy.md  ADR-003-target-kind-split.md  ADR-004-claim-dedup-includes-source-id.md  ADR-005-claim-content-hash-user-id-scope.md  ADR-006-retrieval-filtered-pipeline.md  ADR-007-change-trace-bug-kind-dispatch.md  README.md  index.md
docs/lane-c/: m2-rollout-runbook.md  m3-dual-read-runbook.md  m3-gate-c-smoke-2026-04-30.md
docs/m3-runbooks/: circuit-breaker-runbook.md  observability-cookbook.md  q8-drain-runbook.md
docs/m4-prep/: canary-stage-runbook.md  stage-0-preflight-checklist.md  us-009-acceptance-criteria.md
docs/router/: normalization.md
eval/longmemeval/: ablate_fallback.py  dataset.py  gemini.py  pipeline.py  rejudge.py  run.py  schema_v2.py  store.py  sweep_thresholds.py
eval/results/: conc_smoke.jsonl  conc_smoke.summary.json  day0_complete.md  oracle_full.jsonl  oracle_full.summary.json  oracle_microsmoke.jsonl  oracle_microsmoke.summary.json  oracle_smoke30.jsonl  oracle_smoke30.summary.json  s_baseline.jsonl  s_baseline.summary.json  s_baseline_projudge.jsonl
examples/: quickstart.py
grafana/dashboards/: parallax-dual-read-observability.json  parallax-shadow-observability.json
parallax/: __init__.py  backup.py  cli.py  config.py  events.py  hashing.py  hooks.py  index.py  ingest.py  injector.py  introspection.py  memory_md.py  replay.py  restore.py  retrieve.py  sqlite_store.py  telemetry.py  transitions.py  validators.py  wal.py
parallax/answer/: __init__.py  evidence.py
parallax/eval/: __init__.py  constants.py
parallax/events/: __init__.py  conflict_writer.py
parallax/extract/: __init__.py  conflict.py  extractor.py  ingest.py  review.py  shadow.py  types.py
parallax/llm/: __init__.py  call.py
parallax/migrations/: __init__.py  m0001_initial_schema.py  m0002_events_append_only.py  m0003_claim_metadata.py  m0004_events_user_time_index.py  m0005_claim_metadata_fk.py  m0006_events_session_id.py  m0007_claim_content_hash_user_id.py  m0008_normalize_naive_created_at.py  m0009_api_tokens.py  m0010_memory_cards.py  m0011_crosswalk.py  m0012_crosswalk_aphelion_doc_id.py  m0013_events_event_type_correlation_id_index.py
parallax/obs/: __init__.py  log.py  metrics.py
parallax/retrieval/: __init__.py  contracts.py  retrievers.py
pm2/: ecosystem.config.js
scripts/: bootstrap_linux.sh  dual_read_continuity_check.py  shadow_continuity_check.py
spec/: parallax-exchange.md
tests/: conftest.py  test_backup_cloud.py  test_backup_restore.py  test_bootstrap.py  test_by_bug_fix_order_by.py  test_by_entity_order_by.py  test_by_timeline_microsecond_boundary.py  test_claim_dedup_semantics.py  test_claim_no_source.py  test_cli_cp950.py  test_cli_inspect.py  test_cli_robustness.py  test_cli_router.py  test_config.py  test_content_hash_user_id_scope.py  test_contracts.py  test_event_ingest_schema.py  test_events.py  test_events_session_id.py  test_events_surface.py  test_evidence_answer.py  test_extract_conflict.py  test_extract_discipline.py  test_extract_extractor.py  test_extract_ingest.py  test_extract_mock_provider.py  test_extract_review.py  test_extract_shadow.py  test_fallback_retrieve.py  test_hashing.py  test_hooks.py  test_index.py  test_ingest.py  test_ingest_claim_state.py  test_ingest_with_status.py  test_injector.py  test_introspection.py  test_llm_call.py  test_m0008_naive_ts_normalization.py  test_m0009_api_tokens.py  (+28 more)
(+119 files in other folders)
