[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax-kernel"
version = "0.2.1"
description = "Parallax Kernel — content-addressed canonical knowledge base (P0 core)."
requires-python = ">=3.11"
authors = [{ name = "Chris" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "python-ulid>=2.0",
    "python-dotenv>=1.0",
    "typing-extensions>=4.0",
]

[project.scripts]
parallax = "parallax.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "black>=24",
    "isort>=5",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["parallax*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=parallax --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["parallax"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
