[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax-kernel"
version = "0.3.0"
description = "Parallax Kernel — content-addressed canonical knowledge base with session continuity."
requires-python = ">=3.11"
authors = [{ name = "Chris" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "python-ulid>=2.0",
    "python-dotenv>=1.0",
    "typing-extensions>=4.0",
]

[project.scripts]
parallax = "parallax.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "black>=24",
    "isort>=5",
    "ruff>=0.5",
]
extract = [
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["parallax*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=parallax --cov-report=term-missing --cov-fail-under=80 -m 'not llm_integration'"
markers = [
    "llm_integration: hits a real LLM provider (OpenRouter). Skipped by default; run with -m llm_integration and OPENROUTER_API_KEY set.",
]

[tool.coverage.run]
source = ["parallax"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# "S" (flake8-bandit) is intentionally NOT enabled yet: enabling it
# exposes ~15 pre-existing violations in files outside Phase 3 scope
# (backup.py, introspection.py, telemetry.py, validators.py, restore.py,
# plus several test files). Plan to turn it on in a dedicated repo-wide
# cleanup pass so reviewers can audit each site in isolation.
